# sagemaker-hyperpod-checkpointless-training

./: .gitignore  DEVELOPING.md  Makefile  README.md  THIRD-PARTY  brazil.ion  pyproject.toml  requirements.txt
.github/workflows/: check-deps.yml
examples/: __init__.py  build.sh  hp_basic_example.py  hprun.sh
examples/dataloader/: __init__.py  data_module.py  hf_dataset.py  model_config.yaml  profiling.py
examples/dataloader/encryption/: test_encryption_manager.py
examples/gpt_oss/: gpt_oss_120b_finetune.py  gpt_oss_120b_finetune_checkpointless.py  gpt_oss_120b_full_finetune.py  gpt_oss_120b_full_finetune_checkpointless.py  gpt_oss_120b_peft.py  gpt_oss_120b_peft_checkpointless.py  gpt_oss_120b_pretrain.py  gpt_oss_120b_pretrain_checkpointless.py
examples/gpt_oss/config/: gpt_oss_120b_finetune.yaml  gpt_oss_120b_finetune_checkpointless.yaml  gpt_oss_120b_full_finetune.yaml  gpt_oss_120b_full_finetune_checkpointless.yaml  gpt_oss_120b_peft.yaml  gpt_oss_120b_peft_checkpointless.yaml  gpt_oss_120b_pretrain.yaml  gpt_oss_120b_pretrain_checkpointless.yaml
examples/gpt_oss/launch/: finetune_gpt_oss_120b_checkpointless_p5.yaml  finetune_gpt_oss_120b_p5.yaml  full_finetune_gpt_oss_120b_checkpointless_p5.yaml  full_finetune_gpt_oss_120b_p5.yaml  peft_gpt_oss_120b_checkpointless_p5.yaml  peft_gpt_oss_120b_p5.yaml  pretrain_gpt_oss_120b_checkpointless_p5.yaml  pretrain_gpt_oss_120b_p5.yaml
examples/llama3/: README.md  llama3_70b_finetune.py  llama3_70b_finetune_checkpointless.py  llama3_70b_peft.py  llama3_70b_peft_checkpointless.py  llama3_70b_pretrain.py  llama3_70b_pretrain_checkpointless.py
examples/llama3/config/: llama3_70b_finetune.yaml  llama3_70b_finetune_checkpointless.yaml  llama3_70b_peft.yaml  llama3_70b_peft_checkpointless.yaml  llama3_70b_pretrain.yaml  llama3_70b_pretrain_checkpointless.yaml
examples/llama3/launch/: finetune_llama3_70b_checkpointless_p5.yaml  finetune_llama3_70b_p5.yaml  peft_llama3_70b_checkpointless_p5.yaml  peft_llama3_70b_p5.yaml  pretrain_llama3_70b_checkpointless_p5.yaml  pretrain_llama3_70b_p5.yaml
requirements/: requirements-build-tools.txt  requirements-hatch-test.python3.12.txt
src/hyperpod_checkpointless_training/: __version__.py
src/hyperpod_checkpointless_training/dataloader/: batch_hashing.py  config.py  mmap_data_module.py  parallel_state_util.py  skip_dataloader.py  utils.py
src/hyperpod_checkpointless_training/dataloader/encryption/: __init__.py  encryption_manager.py
src/hyperpod_checkpointless_training/dataloader/mmap/: __init__.py  cache.py  cache_read_dataloader.py  passthrough_cache_dataloader.py  prefetched_dataloader.py  utils.py
src/hyperpod_checkpointless_training/inprocess/: abort.py  compose.py  env_validation.py  exception.py  finalize.py  health_check.py  hp_fault_handling_thread.py  hp_monitor_thread.py  logger.py  param_utils.py  parameter_update_lock.py  train_utils.py  utils.py  wrap.py
src/hyperpod_checkpointless_training/inprocess/elastic/: hp_agent_api.py  hp_agent_event.py  hp_agent_server_api.py  hp_const.py
src/hyperpod_checkpointless_training/inprocess/tools/: __init__.py  (+4 more)
src/hyperpod_checkpointless_training/nemo_plugins/: abort.py  callbacks.py  checkpoint_connector.py  checkpoint_manager.py  checkpoint_transform_callback.py  data_correctness_callback.py  datamodule_epoch_callback.py  error_injection_utils.py  fault_injection.py  load_balancer.py  megatron_strategy.py  memory_checksum.py  patches.py  progress_bar_callback.py  resume.py  utils.py
tests/: __init__.py
tests/dataloader/: test_batch_hashing.py  test_checkpointless_data_module.py  test_config.py  test_dataloader_utils.py  test_parallel_state_util.py  test_skip_dataloader.py
tests/dataloader/deepseek_mmap_tests/: test_faraday.py
tests/dataloader/encryption/: test_encryption_manager.py
tests/dataloader/mmap/: test_cache.py  test_cache_read_dataloader.py  test_mmap_utils.py  test_passthrough_cache_dataloader.py  test_prefetched_dataloader.py
tests/inprocess/: test_hp_agent_api.py  test_hp_monitor_thread.py
tests/inprocess/scripts/: hp_abort.py  hp_all_reduce.py
tests/inprocess/unit_test/: test_abort_transformer_engine.py  test_compose.py  test_env_validation.py  test_exception.py  test_fault_handling_thread.py  test_hp_abort.py  test_hp_finalize.py  test_hp_health_check.py  test_hp_param_utils.py  test_hp_utils.py  test_monitor_thread.py  test_parameter_update_lock.py  test_startup_overhead_tracer.py  test_train_utils.py  test_utils.py  test_wrapper.py
tests/nemo_plugins/: __init__.py
tests/nemo_plugins/unit_test/: test_abort.py  test_callbacks.py  test_checkpoint_connector.py  test_checkpoint_manager.py  test_checkpoint_transform_callback.py  test_datamodule_epoch_callback.py  test_error_injection_utils.py  test_fault_injection.py  test_load_balancer.py  test_megatron_strategy.py  test_memory_checksum.py  test_patches.py  test_utils.py
